<?xml version="1.0"?>
<package format="2">
  <name>custom_package</name>
  <version>0.0.0</version>
  <description>The custom_package package</description>
  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>
  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/BruceChanJianLe/ros-custom-msg</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>custom_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>custom_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
